--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,4 +24,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background-image: url('../assets/background.jpg');
+  @apply bg-center bg-cover;
+}
+
+html {
+  @apply antialiased;
 }
